PARTIAL-FIX | Thumbnails overlap in gridview page

--- a/src/main/resources/assets/app/user/sass/components/_thumbnail.scss
+++ b/src/main/resources/assets/app/user/sass/components/_thumbnail.scss
@@ -3,6 +3,11 @@
     width: 300px;
     position: relative;
     cursor: pointer;
+    z-index: $zIndex-thumbnail;
+
+    &:hover {
+        z-index: $zIndex-thumbnail-hover;
+    }
 
     .image {
         width: 250px;
